# android-auto-headunit

./: .gitignore  .project  CMakeLists.txt  README.md  build.gradle  gradle.properties  gradlew  openssl-build.sh  output.txt  settings.gradle  toolchains_path.py  wercker.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ca/anodsplace/headunit/: AapBroadcastReceiver.kt  App.kt  AppComponent.kt  Main.kt
app/src/main/java/ca/anodsplace/headunit/aap/: AapAudio.kt  AapControl.kt  AapDump.kt  AapMediaPlayback.kt  AapMessage.kt  AapMessageHandler.kt  AapMessageHandlerType.kt  AapMessageIncoming.kt  AapProjectionActivity.kt  AapRead.kt  AapReadMultipleMessages.kt  AapReadSingleMessage.kt  AapService.kt  AapSsl.kt  AapSslNative.kt  AapTransport.kt  AapVideo.kt  ByteArrayWithLimit.kt  KeyCode.kt
app/src/main/java/ca/anodsplace/headunit/app/: BaseFragment.kt  BootCompleteReceiver.kt  RemoteControlReceiver.kt  SurfaceActivity.kt  UsbAttachedActivity.kt
app/src/main/java/ca/anodsplace/headunit/connection/: AccessoryConnection.kt  SocketAccessoryConnection.kt  UsbAccessoryConnection.kt  UsbAccessoryMode.kt  UsbDeviceCompat.kt  UsbReceiver.kt
app/src/main/java/ca/anodsplace/headunit/decoder/: AudioDecoder.kt  AudioTrackWrapper.kt  MicRecorder.kt  VideoDecoder.kt
app/src/main/java/ca/anodsplace/headunit/extractor/: MediaExtractorInterface.kt  StreamVideoExtractor.kt  SystemMediaExtractor.kt
app/src/main/java/ca/anodsplace/headunit/location/: GpsLocation.kt  GpsLocationService.kt
app/src/main/java/ca/anodsplace/headunit/main/: AddNetworkAddressDialog.kt  BackgroundNotification.kt  KeymapFragment.kt  MainActivity.kt  NetworkListFragment.kt  SettingsFragment.kt  UsbListFragment.kt
app/src/main/java/ca/anodsplace/headunit/utils/: AppLog.kt  DeviceIntent.kt  IntentFilters.kt  NetworkUtils.java  NightMode.kt  Settings.kt  SystemUI.java  TwilightCalculator.java  Utils.java
app/src/main/java/ca/anodsplace/headunit/view/: ProjectionView.kt
app/src/main/java/info/anodsplace/headunit/: AapBroadcastReceiver.kt  App.kt  AppComponent.kt  Main.kt
app/src/main/java/info/anodsplace/headunit/aap/: AapAudio.kt  AapControl.kt  AapDump.kt  AapMediaPlayback.kt  AapMessage.kt  AapMessageHandler.kt  AapMessageHandlerImpl.kt  AapMessageHandlerType.kt  AapMessageIncoming.kt  AapProjectionActivity.kt  AapRead.kt  AapReadMultipleMessages.kt  AapReadSingleMessage.kt  AapService.kt  AapSsl.kt  AapSslImpl.kt  AapSslNative.kt  AapTransport.kt  AapVideo.kt  ByteArrayWithLimit.kt  KeyCode.kt  NoCheckTrustManager.kt  SingleKeyKeyManager.kt  Utils.java  Utils.kt
app/src/main/java/info/anodsplace/headunit/app/: BaseFragment.kt  BootCompleteReceiver.kt  RemoteControlReceiver.kt  SurfaceActivity.kt  UsbAttachedActivity.kt
app/src/main/java/info/anodsplace/headunit/connection/: AccessoryConnection.kt  (+5 more)
app/src/main/jni/: hu_jni.c  hu_ssl.c  hu_ssl.h  hu_uti.h  readme.md
app/src/main/jni/libs/headers/openssl/: bn.h  des.h  rc2.h  ssl3.h  ui.h  x509.h  x509_vfy.h  x509v3.h
app/src/main/proto/: common.proto  control.proto  gen.sh  input.proto  media.proto  navigation.proto  playback.proto  sensors.proto
app/src/main/res/drawable/: button_selectable_background.xml
app/src/main/res/layout/: activity_headunit.xml  activity_main.xml  activity_video_test.xml  fragment_add_network_address.xml  fragment_keymap.xml  fragment_list.xml  fragment_settings.xml
app/src/main/res/raw/: husam_h264
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: usb_device_filter.xml
(+403 files in other folders)
